# pyfake

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  SECURITY.md  example.py  main.py  mkdocs.yml  pyproject.toml  requirements.dev.txt  requirements.test.txt  test.py  zensical.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml
archived/: registry.py
docs/: CHANGELOG.md  examples.md  index.md  internals.md  requirements.txt  test.md  testing.md  todo.md  types.md
docs/dev/: testing.md
docs/internals/: how-it-works.md  internals.md  types.md
docs/pydantic/: boolean.md  datetime.md  sets.md  uuid.md
docs/timeseries/: getting-started.md
docs/usage/: boolean.md  dicts.md  enums-literals.md  lists.md  numbers.md  strings.md  tuples.md  uuid.md
dummy/: __init__.py
dummy/core/: engine.py
dummy/generators/: numeric.py
dummy/parsers/: pydantic_parser.py
examples/: from-pydantic.py
pyfake/: __init__.py  exceptions.py  schemas.py
pyfake/core/: api.py  context.py  engine.py  registry.py  resolver.py  timeseries.py  types.py
pyfake/generators/: datetime.py  number.py  primitives.py  primivites.py
pyfake/parsers/: pydantic_parser.py
pyfake/schemas/: models.py
scripts/: release.sh  run_checks.sh
tests/: field_schema.py  models.py  test_incompatibility.py  test_number.py  test_numeric.py  test_primitives.py  test_pyf_numeric.py  test_pyfake.py  test_pyfake_primitives.py  test_timeseries.py
tests/core/: test_api.py  test_exceptions.py  test_pyfake_complex.py  test_pyfake_datetime.py  test_pyfake_primitives.py  test_pyfake_uuid.py  test_registry.py
tests/generators/: test_datetime.py  test_primitives.py  test_uuid.py
