[project]
name = "pyfake"
version = "0.0.6"
description = "A fake data generator that is pydantic compatible."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic[email,timezone]>=2.12.5",
]
license = { text = "MIT" }
authors = [
    {name = "Pranesh Mukhopadhyay", email = "praneshmukherjee7@gmail.com"}
]
classifiers = [
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
    "Intended Audience :: Developers",
]
keywords = [
    "pydantic",
    "fake data",
    "data generation",
    "data validation",
    "data modeling",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "rich>=14.3.1",
]
