[project]
name = "pyfake"
version = "0.0.9"
description = "A fake data generator that is pydantic compatible."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pydantic[email,timezone]>=2.12.5"]
# license = { text = "MIT" }
license = { file = "LICENSE" }
authors = [
    { name = "Pranesh Mukhopadhyay", email = "praneshmukherjee7@gmail.com" },
]
classifiers = [
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
    "Intended Audience :: Developers",
]
keywords = [
    "pydantic",
    "fake data",
    "data generation",
    "data validation",
    "data modeling",
]

[dependency-groups]
dev = ["marimo>=0.17.6", "pytest>=8.4.2", "pytest-cov>=7.0.0", "rich>=14.3.1"]
docs = ["termynal>=0.14.0", "zensical>=0.0.27"]


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=pyfake --cov-report=term-missing --strict-markers"
markers = [
    "datatypes: Unit tests for all datatypes together.",
    "integer: All integer related tests, generator + pydantic integration.",
    "boolean: All boolean related tests, generator + pydantic integration.",
    "string: All string related tests, generator + pydantic integration.",
    "float: All float related tests, generator + pydantic integration.",
    "decimal: All decimal related tests, generator + pydantic integration.",
    "uuid: All UUID related tests, generator + pydantic integration.",
    "datetime: All datetime related tests, generator + pydantic integration.",
    "pyfake: All pyfake core generator tests.",
    "api: Tests for the main `Pyfake` class",
    "registry: All pyfake registry GeneratorRegistry() related tests.",
    "exceptions: Tests for pyfake exception classes.",
    "complex: Tests for complex types (list, set, tuple, dict, enum, literal, nested models).",
]

[tool.coverage.run]
branch = true
source = ["pyfake"]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.setuptools.packages.find]
include = ["pyfake*"]
exclude = ["notebooks*", "site*", "tests*"]
